[package]
name = "login"
version = "0.1.0"
edition = "2018"
authors = ["wongxy <xiyao.wong@foxmail.com>"]

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
regex = "1.5"
rqrr = "0.3.2"
image = "0.23.14"
base64 = "0.13.0"
qrcode = "0.12"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
